--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     password: 1313
     username: root
-    url: jdbc:mysql://localhost:3307/fornecedor
+    url: jdbc:mysql://localhost:3307/fornecedor?createDatabaseIfNotExist=true&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
   jpa:
     hibernate:
       ddl-auto: create-drop
